style.css
* {
    margin: 0;
    padding: 0;
    
}
html {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
    
}


.upper {
    
    background-color: #1F2937;
    padding-bottom: 55px;
    


}

div.logo {
    display: flex;
    
    
}

div.logo img {
    margin-right: auto;
    margin-top: 15px;
    margin-left: 35px;
}

div.logo ul {
    display: inline-flex;
    
}

ul.links {
    margin-top: 15px;
    margin-right: 15px;
}

li.recipe-link {
    margin-right: 25px;
    height: min-content;
    padding: 20px;
    padding-left: 0px;
    padding-right: 0px;
    border-style: solid;
    border-color: bisque;
    background-color: bisque;
    
    

}

li.odin-link {
    height: min-content;
    padding: 20px;
    padding-left: 0px;
    padding-right: 0px;
    border-style: solid;
    border-color: bisque;
    background-color: bisque
}

ul a {
    text-decoration: none;
    color: #1F2937;
    padding: 20px;
    
}

a:hover{

    background-color: rgb(201, 173, 131);

}

div.awesome-text {
    display: flex;
    height: 250px;
}

